---------------------
subunit release notes
---------------------

NEXT (In development)
---------------------

1.3.0
-----

BUGFIXES
~~~~~~~~

* Fix make_stream_binary with FileIO object inputs.
  (Matthew Treinish)

* Fix v2 run() on windows platforms.
  (Claudiu Belu)

1.2.0
-----

IMPROVEMENTS
~~~~~~~~~~~~

* Fixed handling of incomplete writes with eventlet on Python3.
  (Victor Stinner)

* Added subunit2disk, which explodes a stream out to files on disk.
  (Robert Collins)

1.1.0
-----

BUGFIXES
~~~~~~~~

* Unencapsulated strings and encapsulated stdout will be forwarded by
  subunit-2to1. (Robert Collins, #1400519)

* SUBUNIT_FORMATTER which has not been honoured for years is now removed from 
  the codebase. (Jelmer Vernooij)

IMPROVEMENTS
~~~~~~~~~~~~

* ``subunit.run`` now supports ``--locals`` to show local variables in
  tracebacks. (Robert Collins)

1.0.0
-----

BUGFIXES
~~~~~~~~

* Tests have been fixed with testtools 1.2.0 and above.
  (Robert Collins)

IMPROVEMENTS
~~~~~~~~~~~~

* With testtools 1.4.0 and above import errors are now
  shown in detail by ``subunit.run``. (Robert Collins)

0.0.21
------

BUGFIXES
~~~~~~~~

* Brown bag bugfix - 0.0.20's setup.py referenced cvs not csv.
  (Robert Collins, #1361924)

0.0.20
------

BUGFIXES
~~~~~~~~

* subunit2csv is now installed when using pip.
  (Robert Collins, #1279669)

* testscenarios is now a test dependency, not an install dependency.
  (Arfrever Frehtes Taifersar Arahesis, #1292757)

* The python-subunit tarball can now have setup run from the current
  directory. (Robert Collins, #1361857)

0.0.19
------

IMPROVEMENTS
~~~~~~~~~~~~

* ``subunit.run`` in Python will now exit 0 as long as the test stream has
  been generated correctly - this has always been the intent but API friction
  with testtools had prevented it working.
  (Robert Collins)

0.0.18
------

IMPROVEMENTS
~~~~~~~~~~~~

* Fix compatibility with testtools 0.9.35 which dropped the 'all' compat